src/styles.css
@font-face {
  font-family: cinema;
  src: url(./assets/Monster\ AG.ttf);
}

.headerStyles {
  display: flex;
  justify-content: flex-end;
  gap: 1rem;
  font-family: cinema, sans-serif;
  font-size: 35px;
  padding: 1rem;
}

.footerStyles {
  display: flex;
  flex-direction: column;
  font-family: cinema, sans-serif;
  font-size: 35px;
  padding: 1rem;
}

.tvClass {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  grid-row-gap: 25px;
}

.flexdiv {
  display: flex;
}

/* Modal Stykes */

.comment-modal {
  width: 60vw;
  height: 80vh;
}

.modal-heading {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.heading img {
  width: 38vw;
}

.close-modal {
  position: absolute;
  top: 10px;
  right: 0;
  margin-right: 2rem;
  background-color: transparent;
  border: none;
  font-size: 2rem;
  cursor: pointer;
}

.modal-info {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  padding: 0 2rem 0 2rem;
  align-items: center;
  gap: 1rem;
}

.margin-div {
  margin: 0;
}

.margin-likes {
  margin-left: 10px;
}

/* Comment section */

.comments-section h2 {
  display: flex;
  justify-content: center;
}

.comment {
  list-style-type: none;
}

.comment li {
  padding-bottom: 0.5rem;
}

/* Add comment */

.add-comment {
  padding: 1rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.form-comment {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  width: 30vw;
}

.form-comment h3 {
  justify-content: start;
}

.form-comment input {
  width: 20vw;
}

